# GILAT_simple

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  MODULAR_REFACTORING.md  README.md  README_MODULAR.md  REFACTORING_GUIDE.md  REFACTOR_COMPARISON.md  UI_README.md  agent.py  demo_unified_graph.py  docker-compose.yml  env.example  pyproject.toml  requirements.txt  run_ui.py  streamlit_app.py  test.md  test_modular.py  test_summary_length.py
src/: __init__.py  main.py
src/api/: auth_endpoints.py  endpoints.py
src/core/: auth.py  config.py
src/graphs/: __init__.py  ingestion.py  reflection.py  summary.py  unified_summary_reflection.py
src/graphs/subgraphs/: __init__.py  document_retrieval.py  reflection.py  summarization.py
src/models/: database.py  schemas.py
src/services/: __init__.py  document_service.py  parallel_service.py  web_content_service.py
src/utils/: __init__.py  graph_schemas.py  reflection_utils.py  state_transformers.py  summarization_strategies.py  topic_processing.py
